--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@ title: Developer
 author: GitHub User
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This site is very popular around the world because it makes a very good relationship among customers and people think positive about it.
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
