--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+theme: minima
+title: E-commerce 
+author: umerbl
+email: umer.saif0009@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A website that allows people to buy and sell physical goods, services, and digital products over the internet rather than at a brick-and-mortar location.
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
